implement login component

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,37 @@
-<p>login works!</p>
+<div class="modal modal-sheet position-static d-block bg-body-secondary p-4 py-md-5" tabindex="-1" role="dialog"
+    id="modalSignin">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content rounded-4 shadow">
+            <div class="modal-header p-5 pb-4 border-bottom-0">
+                <h1 class="fw-bold mb-0 fs-2">Sign in</h1>
+            </div>
+
+            <div class="modal-body p-5 pt-0">
+                <form [formGroup]="loginForm">
+                    <div class="form-floating mb-3">
+                        <input type="text" class="form-control rounded-3" id="username" formControlName="username"
+                            placeholder="Username">
+                        <label for="username">Username</label>
+                        <div *ngIf="loginForm.controls['username'].dirty && loginForm.hasError('required', 'username')"
+                            class="text-danger">
+                            *Username is required.
+                        </div>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="password" class="form-control rounded-3" id="password" formControlName="password"
+                            placeholder="Password">
+                        <label for="password">Password</label>
+                        <div *ngIf="loginForm.controls['password'].dirty && loginForm.hasError('required', 'password')"
+                            class="text-danger">
+                            *Password is required.
+                        </div>
+                    </div>
+                    <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" (click)="onLogin()"
+                        [disabled]="loginForm.invalid" type="submit">Sign in</button>
+                    <small><a routerLink="/forgot-password">Forgot password?</a></small><br>
+                    <small class="text-body-secondary">Don't have an account? <a id="forget" routerLink="/register">Sign up</a></small>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
