implement reset password component

--- a/src/app/components/reset-password/reset-password.component.html
+++ b/src/app/components/reset-password/reset-password.component.html
@@ -1,1 +1,37 @@
-<p>reset-password works!</p>
+<div class="modal modal-sheet position-static d-block bg-body-secondary p-4 py-md-5" tabindex="-1" role="dialog"
+    id="modalResetPassword">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content rounded-4 shadow">
+            <div class="modal-header p-5 pb-4 border-bottom-0">
+                <h1 class="fw-bold mb-0 fs-2">Reset Password</h1>
+            </div>
+
+            <div class="modal-body p-5 pt-0">
+                <form [formGroup]="resetPasswordForm">
+                    <div class="form-floating mb-3">
+                        <input type="password" class="form-control rounded-3" id="newPassword" formControlName="newPassword"
+                            placeholder="New Password">
+                        <label for="newPassword">New Password</label>
+                        <div *ngIf="newPassword?.touched && resetPasswordForm.hasError('required', 'newPassword')"
+                            class="text-danger">
+                            *New Password is required.
+                        </div>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="password" class="form-control rounded-3" id="confirmPassword" formControlName="confirmPassword"
+                            placeholder="Confirm Password">
+                        <label for="confirmPassword">Confirm Password</label>
+                        <div *ngIf="confirmPassword?.touched && resetPasswordForm.hasError('required', 'confirmPassword')"
+                            class="text-danger">
+                            *Confirm Password is required.
+                        </div>
+                    </div>
+                    <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" (click)="onResetPassword()"
+                        [disabled]="resetPasswordForm.invalid" type="submit">Reset Password</button>
+                    <small class="text-body-secondary">Remembered your password? <a routerLink="/login">Sign in</a></small><br>
+                    <small class="text-body-secondary">Don't have an account? <a id="forget" routerLink="/register">Sign up</a></small>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
