--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,25 @@
-<p>footer works!</p>
+<div class="container">
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item">
+                <a routerLink="/home" class="nav-link px-2 text-body-secondary">Home</a>
+            </li>
+            <li class="nav-item">
+                <a routerLink="/features" class="nav-link px-2 text-body-secondary">Features</a>
+            </li>
+            <li class="nav-item">
+                <a routerLink="/pricing" class="nav-link px-2 text-body-secondary">Pricing</a>
+            </li>
+            <li class="nav-item">
+                <a routerLink="/faqs" class="nav-link px-2 text-body-secondary">FAQs</a>
+            </li>
+            <li class="nav-item">
+                <a routerLink="/about" class="nav-link px-2 text-body-secondary">About</a>
+            </li>
+            <li class="nav-item">
+                <a routerLink="/support" class="nav-link px-2 text-body-secondary">Support</a>
+            </li>
+        </ul>
+        <p class="text-center text-body-secondary">&copy; {{ getYear() }} Vanja Vasic. All rights reserved.</p>
+    </footer>
+</div>
