--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,6 +4,7 @@ header {
     .nav-link {
         transition: color 0.2s ease;
 
+        &.active,
         &:hover {
             color: var(--bs-primary) !important;
         }
